--- a/NZWalks.API/NZWalks.API.csproj
+++ b/NZWalks.API/NZWalks.API.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NZWalks.CrossCutting.IoC\NZWalks.CrossCutting.IoC.csproj" />
     <ProjectReference Include="..\NZWalks.Domain\NZWalks.Domain.csproj" />
     <ProjectReference Include="..\NZWalks.Infrastructure\NZWalks.Infrastructure.csproj" />
 	<ProjectReference Include="..\NZWalks.Application\NZWalks.Application.csproj" />
