--- a/NZWalks.Application/NZWalks.Application.csproj
+++ b/NZWalks.Application/NZWalks.Application.csproj
@@ -7,17 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="DTOs\DifficultyDto.cs" />
-    <Compile Remove="DTOs\WalkDto.cs" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NZWalks.Domain\NZWalks.Domain.csproj" />
     <ProjectReference Include="..\NZWalks.Infrastructure\NZWalks.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Handlers\" />
   </ItemGroup>
 
 </Project>
