Adding JWT Token and RefreshToken

--- a/NZWalks.Presentation/appsettings.Development.json
+++ b/NZWalks.Presentation/appsettings.Development.json
@@ -7,5 +7,12 @@
     },
     "ConnectionStrings": {
         "ConnectionString": "Data Source=192.168.16.66;Initial Catalog=NZWalks;Persist Security Info=True; User ID=sa;Password=Coaliza@2025;MultipleActiveResultSets=True;Pooling=True; Max Pool Size=1000; TrustServerCertificate=True"
+    },
+    "Jwt": {
+        "Key": "UR|PhuMi5hhq?%1'e|o|)*#_D*oOY9das8128u182d21",
+        "Issuer": "https://localhost:7244/",
+        "Audience": "https://localhost:7244",
+        "ExpiryMinutes": 5
     }
+
 }
